# type-normalizer

./: README.md  stack.yaml  type-normalizer.cabal
src/: Factorization.hs
