name:                type-normalizer
version:             0.1.0.0
synopsis:            Type normalizer
description:         Groups similar types modulo some 'semantic preserving' operations into a common, normalized, type.
homepage:            https://github.com/githubuser/type-normalizer#readme
license:             BSD3
license-file:        LICENSE
author:              Alejandro Duran Pallares
maintainer:          vwwv@correo.ugr.es
copyright:           2016 Alejandro Duran Pallares
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Factorization
  other-modules:
  build-depends:       base
                     , protolude
                     , QuickCheck
                     , containers
                     , pretty-show

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings 
                     , MultiWayIf

source-repository head
  type:     git
  location: https://github.com/githubuser/type-normalizer
